--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -1,7 +1,7 @@
 # The delay before the scheduled tasks start executing
-delay=30000
+delay=10000
 # The period between notifications for timed tasks
-period=60000
+period=10000
 # The maximum age of the indexes
 max.age=36000000
 
@@ -12,7 +12,7 @@ web.service.delay=10000
 web.service.period=10000
 
 # The batch size for fetching records from the database
-jdbc.batch.size=10000
+jdbc.batch.size=10
 internet.batch.size=10
 
 # The number of threads for each indexing component
@@ -25,10 +25,10 @@ email.handler.threads=1
 files.path=./modules/core/src/test/resources/data
 
 # To limit the results
-faq.predicate=where faq.faqid < 1000
+faq.predicate=where faq.faqid < 1000000
 
 # The time delay between reads in the crawler
-throttle=1000
+throttle=250
 # The first seed url for internet crawling
 url=http://www.ikokoon.eu/ikokoon/index.html
 
