--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -12,7 +12,7 @@ web.service.delay=10000
 web.service.period=10000
 
 # The batch size for fetching records from the database
-jdbc.batch.size=10
+jdbc.batch.size=1000
 internet.batch.size=10
 
 # The number of threads for each indexing component
@@ -35,8 +35,8 @@ url=http://www.ikokoon.eu/ikokoon/index.html
 # Lucene properties:
 buffer.size=128
 compound.file=true
-merge.factor=10
-buffered.docs=10
+merge.factor=100
+buffered.docs=100
 max.field.length=100000
 max.read.length=1000000
 
@@ -56,8 +56,8 @@ jdbc.driver.type=4
 jdbc.user=db2admin
 jdbc.password=db2admin
 jdbc.schema=db2admin
-jdbc.url=jdbc:db2://localhost:50000/ikube
-jdbc.database=ikube
+jdbc.url=jdbc:db2://localhost:50000/billion
+jdbc.database=billion
 jdbc.port=50000
 jdbc.server=localhost
 jdbc.driver=com.ibm.db2.jcc.DB2Driver
