--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -140,6 +140,10 @@
 								<copy file="${ikube.war}" todir="${tomcat.1}/webapps" overwrite="true" failonerror="false" />
 								<copy file="${ikube.war}" todir="${tomcat.2}/webapps" overwrite="true" failonerror="false" />
 								<copy file="${ikube.war}" todir="${tomcat.3}/webapps" overwrite="true" failonerror="false" />
+								
+								<delete dir="${tomcat.1}/webapps/ikube" failonerror="false" />
+								<delete dir="${tomcat.2}/webapps/ikube" failonerror="false" />
+								<delete dir="${tomcat.3}/webapps/ikube" failonerror="false" />
 							</tasks>
 						</configuration>
 						<goals>
