--- a/code/core/src/main/resources/META-INF/client/spring.properties
+++ b/code/core/src/main/resources/META-INF/client/spring.properties
@@ -11,9 +11,11 @@ index.directory.path=D:/cluster/indexes
 index.directory.path.backup=D:/cluster/indexes/backup
 
 url=http://ikube.ikube.cloudbees.net/index.html
+url.million=http://localhost/million/adapt.html
 faq.predicate=where faq.faqid < 100000000 and published = 1
-patient.predicate=where patient.id > 0 and patient.id > 0
+patient.predicate=where patient.id > 0
 files.path=./code/core/src/test/resources/data/files
+files.path.million=D:/apache-tomcat-6.0.26
 
 throttle=0
 
@@ -28,7 +30,7 @@ jdbc.maxStatements=1000
 jdbc.checkOutTimeout=360000000
 jdbc.numHelperThreads=5
 
-jdbc.batch.size=100
+jdbc.batch.size=10000
 internet.batch.size=100
 
 searcher.index.name=index
