--- a/pom.xml
+++ b/pom.xml
@@ -548,6 +548,16 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>it.assist.jrecordbind</groupId>
+			<artifactId>jrecordbind-java5</artifactId>
+			<version>2.3.3</version>
+		</dependency>	
+			<dependency>
+			<groupId>net.sf.flatpack</groupId>
+			<artifactId>flatpack</artifactId>
+			<version>3.1.1</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
