--- a/code/core/src/main/resources/META-INF/client/spring.properties
+++ b/code/core/src/main/resources/META-INF/client/spring.properties
@@ -54,6 +54,6 @@ url.falcon.million=http://falcon:9000/million/adapt.html
 faq.predicate=where faq.faqid < 10000000 and published = 1
 patient.predicate=where patient.id > 0
 files.path=./code/core/src/test/resources/data/files
-files.path.million=D:/apache-tomcat-6.0.26
+files.path.million=D:/cluster/apache-tomcat-6.0.29-1/webapps/ROOT/million
 files.excluded.pattern=.*(.svn).*|.*(database).*|.*(.gif).*|.*(.svg).*|.*(.jpg).*|.*(.zip).*|.*(.jar).*|.*(.exe).*|.*(.dll).*|.*(.war).*|.*(.dtd).*|.*(.jsp).*
 internet.excluded.pattern=.*(.zip).*|.*(.png).*|.*(/search).*|.*(/images).*|.*(wiki).*|.*(r=).*|.*(.war).*
