--- a/code/com/pom.xml
+++ b/code/com/pom.xml
@@ -1,176 +1,181 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation=" http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation=" http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-	<modelVersion>4.0.0</modelVersion>
-	<artifactId>ikube-com</artifactId>
-	<packaging>jar</packaging>
-	
-	<parent>
-		<groupId>ikube</groupId>
-		<artifactId>ikube</artifactId>
-		<version>4.4.0-SNAPSHOT</version>
-		<relativePath>../../pom.xml</relativePath>
-	</parent>
-	
-	<build>
-		<resources>
-			<resource>
-				<directory>src/main/java</directory>
-			</resource>
-			<resource>
-				<directory>src/main/resources</directory>
-			</resource>
-		</resources>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.7.1</version>
-				<configuration>
-					<forkMode>once</forkMode>
-					<argLine>-javaagent:../../serenity/serenity.jar ${memory.parameters} ${serenity.parameters} -XX:-UseSplitVerifier</argLine>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-antrun-plugin</artifactId>
-				<version>1.6</version>
-				<executions>
-					<execution>
-						<id>copy-configuration</id>
-						<phase>compile</phase>
-						<configuration>
-							<target>
-								<echo message="Base directory : ${basedir}, ">Base directory : ${basedir}</echo>
-                                <delete dir="ikube" />
-								<copy todir="ikube" failonerror="true" verbose="false">
-									<fileset dir="../libs/src/main/resources/ikube" />
-								</copy>
+    <modelVersion>4.0.0</modelVersion>
+    <artifactId>ikube-com</artifactId>
+    <packaging>jar</packaging>
+
+    <parent>
+        <groupId>ikube</groupId>
+        <artifactId>ikube</artifactId>
+        <version>4.4.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
+    </parent>
+
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.7.1</version>
+                <configuration>
+                    <forkMode>once</forkMode>
+                    <argLine>-javaagent:../../serenity/serenity.jar ${memory.parameters} ${serenity.parameters}
+                        -XX:-UseSplitVerifier
+                    </argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.6</version>
+                <executions>
+                    <execution>
+                        <id>copy-configuration</id>
+                        <phase>compile</phase>
+                        <configuration>
+                            <target>
+                                <echo message="Base directory : ${basedir}, ">Base directory : ${basedir}</echo>
+
+                                <!--<delete dir="ikube" />
                                 <delete dir="../core/ikube" />
-								<copy todir="../core/ikube" failonerror="true" verbose="false">
-									<fileset dir="../libs/src/main/resources/ikube" />
-								</copy>
                                 <delete dir="../war/ikube" />
-								<copy todir="../war/ikube" failonerror="true" verbose="false">
-									<fileset dir="../libs/src/main/resources/ikube" />
-								</copy>
                                 <delete dir="../../ikube" />
-								<copy todir="../../ikube" failonerror="true" verbose="false">
-									<fileset dir="../libs/src/main/resources/ikube" />
-								</copy>
-
                                 <delete dir="ikube/production" />
-								<copy todir="ikube/production" failonerror="true" verbose="false">
-                                    <fileset dir="../libs/src/main/resources/indexes/production" />
+                                <delete dir="../core/ikube/production" />
+                                <delete dir="../war/ikube/production" />
+                                <delete dir="../../ikube/production" />
+                                <delete dir="ikube/integration" />
+                                <delete dir="../core/ikube/integration" />
+                                <delete dir="../war/ikube/integration" />
+                                <delete dir="../../ikube/integration" />
+                                <delete dir="ikube/analytics" />
+                                <delete dir="../core/ikube/analytics" />
+                                <delete dir="../war/ikube/analytics" />
+                                <delete dir="../../ikube/analytics" />
+                                <delete dir="../war/ikube/twitter" />-->
+
+                                <copy todir="ikube" failonerror="true" verbose="false">
+                                    <fileset dir="../libs/src/main/resources/ikube"/>
+                                </copy>
+                                <copy todir="../core/ikube" failonerror="true" verbose="false">
+                                    <fileset dir="../libs/src/main/resources/ikube"/>
+                                </copy>
+                                <copy todir="../war/ikube" failonerror="true" verbose="false">
+                                    <fileset dir="../libs/src/main/resources/ikube"/>
+                                </copy>
+                                <copy todir="../../ikube" failonerror="true" verbose="false">
+                                    <fileset dir="../libs/src/main/resources/ikube"/>
                                 </copy>
 
-                                <delete dir="../core/ikube/production" />
+                                <copy todir="ikube/production" failonerror="true" verbose="false">
+                                    <fileset dir="../libs/src/main/resources/indexes/production"/>
+                                </copy>
+
                                 <copy todir="../core/ikube/production" failonerror="true" verbose="false">
-									<fileset dir="../libs/src/main/resources/indexes/production" />
-								</copy>
-                                <delete dir="../war/ikube/production" />
-								<copy todir="../war/ikube/production" failonerror="true" verbose="false">
-									<fileset dir="../libs/src/main/resources/indexes/production" />
-								</copy>
-                                <delete dir="../../ikube/production" />
-								<copy todir="../../ikube/production" failonerror="true" verbose="false">
-									<fileset dir="../libs/src/main/resources/indexes/production" />
-								</copy>
+                                    <fileset dir="../libs/src/main/resources/indexes/production"/>
+                                </copy>
+                                <copy todir="../war/ikube/production" failonerror="true" verbose="false">
+                                    <fileset dir="../libs/src/main/resources/indexes/production"/>
+                                </copy>
+                                <copy todir="../../ikube/production" failonerror="true" verbose="false">
+                                    <fileset dir="../libs/src/main/resources/indexes/production"/>
+                                </copy>
 
-                                <delete dir="ikube/integration" />
-								<copy todir="ikube/integration" failonerror="true" verbose="false">
-									<fileset dir="../libs/src/main/resources/indexes/integration" />
-								</copy>
-                                <delete dir="../core/ikube/integration" />
-								<copy todir="../core/ikube/integration" failonerror="true" verbose="false">
-									<fileset dir="../libs/src/main/resources/indexes/integration" />
-								</copy>
-                                <delete dir="../war/ikube/integration" />
-								<copy todir="../war/ikube/integration" failonerror="true" verbose="false">
-									<fileset dir="../libs/src/main/resources/indexes/integration" />
-								</copy>
-                                <delete dir="../../ikube/integration" />
-								<copy todir="../../ikube/integration" failonerror="true" verbose="false">
-									<fileset dir="../libs/src/main/resources/indexes/integration" />
-								</copy>
+                                <copy todir="ikube/integration" failonerror="true" verbose="false">
+                                    <fileset dir="../libs/src/main/resources/indexes/integration"/>
+                                </copy>
+                                <copy todir="../core/ikube/integration" failonerror="true" verbose="false">
+                                    <fileset dir="../libs/src/main/resources/indexes/integration"/>
+                                </copy>
+                                <copy todir="../war/ikube/integration" failonerror="true" verbose="false">
+                                    <fileset dir="../libs/src/main/resources/indexes/integration"/>
+                                </copy>
+                                <copy todir="../../ikube/integration" failonerror="true" verbose="false">
+                                    <fileset dir="../libs/src/main/resources/indexes/integration"/>
+                                </copy>
 
-                                <delete dir="ikube/analytics" />
-								<copy todir="ikube/analytics" failonerror="true" verbose="false">
-									<fileset dir="../libs/src/main/resources/analytics" />
-								</copy>
-                                <delete dir="../core/ikube/analytics" />
-								<copy todir="../core/ikube/analytics" failonerror="true" verbose="false">
-									<fileset dir="../libs/src/main/resources/analytics" />
-								</copy>
-                                <delete dir="../war/ikube/analytics" />
-								<copy todir="../war/ikube/analytics" failonerror="true" verbose="false">
-									<fileset dir="../libs/src/main/resources/analytics" />
-								</copy>
-                                <delete dir="../../ikube/analytics" />
-								<copy todir="../../ikube/analytics" failonerror="true" verbose="false">
-									<fileset dir="../libs/src/main/resources/analytics" />
-								</copy>
+                                <copy todir="ikube/analytics" failonerror="true" verbose="false">
+                                    <fileset dir="../libs/src/main/resources/analytics"/>
+                                </copy>
+                                <copy todir="../core/ikube/analytics" failonerror="true" verbose="false">
+                                    <fileset dir="../libs/src/main/resources/analytics"/>
+                                </copy>
+                                <copy todir="../war/ikube/analytics" failonerror="true" verbose="false">
+                                    <fileset dir="../libs/src/main/resources/analytics"/>
+                                </copy>
+                                <copy todir="../../ikube/analytics" failonerror="true" verbose="false">
+                                    <fileset dir="../libs/src/main/resources/analytics"/>
+                                </copy>
 
-                                <delete dir="../war/ikube/twitter" />
-								<copy todir="../war/ikube/twitter" failonerror="true" verbose="true">
-									<fileset dir="../libs/src/main/resources/indexes/twitter" />
-								</copy>
-							</target>
-						</configuration>
-						<goals>
-							<goal>run</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
+                                <copy todir="../war/ikube/twitter" failonerror="true" verbose="true">
+                                    <fileset dir="../libs/src/main/resources/indexes/twitter"/>
+                                </copy>
+                            </target>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
-	<dependencies>
-		<dependency>
-			<groupId>jdom</groupId>
-			<artifactId>jdom</artifactId>
-			<version>1.1</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>net.sf.opencsv</groupId>
-			<artifactId>opencsv</artifactId>
-			<version>2.3</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>sevenzip</groupId>
-			<artifactId>jbinding</artifactId>
-			<version>4.65.1</version>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>sevenzip</groupId>
-			<artifactId>jbinding-linux</artifactId>
-			<version>4.65.1</version>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>canyon</groupId>
-			<artifactId>canyon</artifactId>
-			<version>0.9.8</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.jcraft</groupId>
-			<artifactId>jsch</artifactId>
-			<version>0.1.48</version>
-		</dependency>
-		<dependency>
-			<groupId>ant</groupId>
-			<artifactId>ant</artifactId>
-			<version>1.7.0</version>
-		</dependency>
-	</dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>jdom</groupId>
+            <artifactId>jdom</artifactId>
+            <version>1.1</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>2.3</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>sevenzip</groupId>
+            <artifactId>jbinding</artifactId>
+            <version>4.65.1</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>sevenzip</groupId>
+            <artifactId>jbinding-linux</artifactId>
+            <version>4.65.1</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>canyon</groupId>
+            <artifactId>canyon</artifactId>
+            <version>0.9.8</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jsch</artifactId>
+            <version>0.1.48</version>
+        </dependency>
+        <dependency>
+            <groupId>ant</groupId>
+            <artifactId>ant</artifactId>
+            <version>1.7.0</version>
+        </dependency>
+    </dependencies>
 
 </project>
