--- a/code/tool/pom.xml
+++ b/code/tool/pom.xml
@@ -50,7 +50,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.2.1</version>
                 <executions>
-                    <execution>
+                    <!--<execution>
                         <phase>deploy</phase>
                         <configuration>
                             <mainClass>ikube.deploy.Deployer</mainClass>
@@ -67,7 +67,7 @@
                         <goals>
                             <goal>java</goal>
                         </goals>
-                    </execution>
+                    </execution>-->
                 </executions>
             </plugin>
 
