--- a/code/tool/pom.xml
+++ b/code/tool/pom.xml
@@ -51,7 +51,7 @@
                 <version>1.2.1</version>
                 <executions>
                     <execution>
-                        <phase>install</phase>
+                        <phase>deploy</phase>
                         <configuration>
                             <mainClass>ikube.deploy.Deployer</mainClass>
                             <arguments>
