--- a/pom.xml
+++ b/pom.xml
@@ -762,6 +762,13 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.2.1</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.nfunk</groupId>
 			<artifactId>jep</artifactId>
 			<version>2.4.1</version>
