--- a/pom.xml
+++ b/pom.xml
@@ -1152,6 +1152,13 @@
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.9.9-RC1</version>
+            <type>jar</type>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 
 	<repositories>
