--- a/pom.xml
+++ b/pom.xml
@@ -920,23 +920,23 @@
 			<scope>compile</scope>
 		</dependency>
 
-        <dependency>
-            <groupId>org.gridgain</groupId>
-            <artifactId>gridgain-platform</artifactId>
-            <version>${gridgain.version}</version>
-            <type>pom</type>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.gridgain</groupId>-->
+            <!--<artifactId>gridgain-platform</artifactId>-->
+            <!--<version>${gridgain.version}</version>-->
+            <!--<type>pom</type>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.gridgain</groupId>
             <artifactId>gridgain-streaming</artifactId>
             <version>${gridgain.version}</version>
-            <type>jar</type>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.gridgain</groupId>
             <artifactId>gridgain-datagrid</artifactId>
             <version>${gridgain.version}</version>
-            <type>jar</type>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
