--- a/pom.xml
+++ b/pom.xml
@@ -135,7 +135,7 @@
                     <executions>
                         <execution>
                             <id>copy-configuration</id>
-                            <phase>install</phase>
+                            <phase>initialize</phase>
                             <configuration>
                                 <target>
                                     <!--<echo message="basedir : ${basedir}, ">basedir : ${basedir}</echo>
@@ -218,7 +218,7 @@
                 <version>2.7.1</version>
                 <configuration>
                     <forkMode>once</forkMode>
-                    <testFailureIgnore>true</testFailureIgnore>
+                    <testFailureIgnore>false</testFailureIgnore>
                     <!--suppress MavenModelInspection -->
                     <argLine>-javaagent:${project.parent.basedir}/serenity/serenity.jar ${serenity-parameters} ${memory-parameters}</argLine>
                 </configuration>
@@ -230,7 +230,7 @@
 				<configuration>
 					<forkMode>once</forkMode>
                     <argLine>-XX:PermSize=512m -XX:MaxPermSize=1024m -Xms2048m -Xmx4096m</argLine>
-                    <testFailureIgnore>true</testFailureIgnore>
+                    <testFailureIgnore>false</testFailureIgnore>
                     <includes>
                         <include>**/*Integration*.java</include>
                     </includes>
