--- a/code/core/pom.xml
+++ b/code/core/pom.xml
@@ -14,7 +14,7 @@
 	<parent>
 		<groupId>ikube</groupId>
 		<artifactId>ikube</artifactId>
-        <version>${ikube-version}</version>
+        <version>5.1.0</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
