--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>ikube</groupId>
 	<artifactId>ikube</artifactId>
 	<packaging>pom</packaging>
-	<version>${ikube-version}</version>
+	<version>5.1.0</version>
 
     <scm>
         <url>https://github.com/michaelcouck/ikube</url>
