--- a/pom.xml
+++ b/pom.xml
@@ -64,8 +64,9 @@
             Lucene:
             Was 3.6.1 at 20.03.12
             Was 3.6.2 at 23.12.13
+            Was 4.6.0 at 04.09.14
         -->
-        <lucene-version>4.9.0</lucene-version>
+        <lucene-version>4.8.0</lucene-version>
 
         <jersey-version>1.18.1</jersey-version>
         <postgresql-driver-version>9.1-901-1.jdbc4</postgresql-driver-version>
