--- a/code/site/src/main/webapp/WEB-INF/web.xml
+++ b/code/site/src/main/webapp/WEB-INF/web.xml
@@ -1,55 +1,58 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<web-app 
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-	xmlns="http://java.sun.com/xml/ns/javaee" 
-	xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+<web-app
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xmlns="http://java.sun.com/xml/ns/javaee"
 
-	xsi:schemaLocation="
+    xsi:schemaLocation="
 		http://java.sun.com/xml/ns/javaee
         http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID"
-	version="2.5">
+    version="2.5">
 
 	<display-name>Ikube site</display-name>
 
-	<!--<listener>
+	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener>-->
+	</listener>
 
-	<!--<context-param>
+	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
 			/WEB-INF/spring.xml,
 			/WEB-INF/spring/spring-security.xml,
 			/WEB-INF/spring/spring-users.xml
 		</param-value>
-	</context-param>-->
+	</context-param>
 
-	<!--<listener>
+	<listener>
 		<listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
-	</listener>-->
+	</listener>
 	
-	<!--<filter>
+	<filter>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-	</filter>-->
-	<!--<filter-mapping>
+	</filter>
+	<filter-mapping>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<url-pattern>/*</url-pattern>
-	</filter-mapping>-->
+	</filter-mapping>
 
-	<!--<servlet>
+	<servlet>
 		<servlet-name>springDispatcherServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value></param-value>
+            <param-value>
+                /WEB-INF/spring.xml,
+                /WEB-INF/spring/spring-security.xml,
+                /WEB-INF/spring/spring-users.xml
+            </param-value>
 		</init-param>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>springDispatcherServlet</servlet-name>
 		<url-pattern>*.html</url-pattern>
-	</servlet-mapping>-->
+	</servlet-mapping>
 
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
