--- a/pom.xml
+++ b/pom.xml
@@ -136,7 +136,7 @@
                     <executions>
                         <execution>
                             <id>copy-configuration</id>
-                            <phase>deploy</phase>
+                            <phase>test</phase>
                             <configuration>
                                 <target>
                                     <!--<echo message="basedir : ${basedir}, ">basedir : ${basedir}</echo>
