--- a/code/site/pom.xml
+++ b/code/site/pom.xml
@@ -145,7 +145,7 @@
 			<artifactId>jsp-api</artifactId>
 			<version>2.0</version>
 			<type>jar</type>
-            <scope>compile</scope>
+            <scope>provided</scope>
 		</dependency>
 
 		<dependency>
